--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,25 @@
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <issueTests>${project.build.testOutputDirectory}/issueTests.xml</issueTests>
+        <projectsTest>${project.build.testOutputDirectory}/projectTests.xml</projectsTest>
+        <allTests>${project.build.testOutputDirectory}/allTests.xml</allTests>
+        <defaultSuiteFiles>${allTests}</defaultSuiteFiles>
+        <suiteFile>${defaultSuiteFiles}</suiteFile>
     </properties>
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.12</version>
+                <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>${suiteFile}</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>com.github.webdriverextensions</groupId>
                 <artifactId>webdriverextensions-maven-plugin</artifactId>
@@ -28,6 +43,7 @@
                     </execution>
                 </executions>
                 <configuration>
+
                     <installationDirectory>src/main/resources</installationDirectory>
                     <drivers>
                         <driver>
