--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.12</version>
                 <configuration>
+                    <systemProperties>
+                        <property>
+                            <name>allure.results.directory</name>
+                            <value>/Users/artyomtonoyan/.jenkins/workspace/API Project/allure-results</value>
+                        </property>
+                    </systemProperties>
                     <suiteXmlFiles>
                         <suiteXmlFile>${suiteFile}</suiteXmlFile>
                     </suiteXmlFiles>
@@ -43,7 +49,6 @@
                     </execution>
                 </executions>
                 <configuration>
-
                     <installationDirectory>src/main/resources</installationDirectory>
                     <drivers>
                         <driver>
@@ -61,6 +66,7 @@
                             <version>0.29.1</version>
                         </driver>
                     </drivers>
+
                 </configuration>
             </plugin>
         </plugins>
@@ -97,5 +103,18 @@
             <version>1.2.17</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-maven</artifactId>
+            <version>2.10.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>2.14.0</version>
+        </dependency>
+
     </dependencies>
+
+
 </project>
